# archid-auto

./: Cargo.toml  justfile
examples/: publish.rs
src/: contract.rs  error.rs  msg.rs  state.rs
src/handlers/: execute.rs  instantiate.rs  query.rs
tests/: integration.rs
