[package]
name = "app"
version = "0.0.2"
authors = [
  "CyberHoward <cyberhoward@protonmail.com>",
  "Adair <adair@abstract.money>",
  "Abstract Money <contact@abstract.money>",
]
edition = "2021"
homepage = ""
documentation = ""
repository = ""
license = "GPL-3.0-or-later"
keywords = ["cosmos", "cosmwasm", "abstractsdk"]
resolver = "2"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "schema"
required-features = ["schema"]

[[example]]
name = "local_daemon"
required-features = ["daemon"]

[[example]]
name = "publish"
required-features = ["daemon"]

[features]
default = ["export"]
export = []
schema = ["abstract-app/schema"]
interface = ["export", "abstract-app/interface-macro", "dep:cw-orch"]
daemon = ["interface", "cw-orch/daemon"]

[dependencies]
cosmwasm-std = { version = "1.5.3" }
cosmwasm-schema = { version = "1.5.3" }
cw-controllers = { version = "1.1.2" }
cw-storage-plus = "1.2.0"
thiserror = { version = "1.0.50" }
schemars = "0.8"
cw-asset = { version = "3.0.0" }
abstract-app = { version = "0.21.0" }

# Dependencies for interface
cw-orch = { version = "0.20.1", optional = true }
archid-registry = { version = "1.0.3", features = ["library"] }

[dev-dependencies]
app = { path = ".", features = ["interface"] }
abstract-client = { version = "0.21.0" }
abstract-app = { version = "0.21", features = ["test-utils"] }
abstract-interface = { version = "0.21.0" , features = ["daemon"]}
speculoos = "0.11.0"
semver = "1.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
cw-orch = { version = "0.20.1", features = ["daemon"] }
clap = { version = "4.3.7", features = ["derive"] }
abstract-testing = "0.22.1"
